# rust-pickle

./: Cargo.toml
examples/: gen.py  test.py
src/: lib.rs  main.rs
tests/: pickle.rs
